--- a/lilia/lilia.vcxproj
+++ b/lilia/lilia.vcxproj
@@ -80,6 +80,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>lilia</RootNamespace>
     <ProjectName>lilia</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
